[gd_scene load_steps=25 format=3 uid="uid://jrc1t6b8jqwl"]

[ext_resource type="Script" path="res://Enemy/Enemy-Cucumber/Cucumber.gd" id="1_70jif"]
[ext_resource type="Texture2D" uid="uid://dnhay52yhggps" path="res://Enemy/Enemy-Cucumber/EnemyCucumber.png" id="2_2h4xy"]
[ext_resource type="Shader" path="res://Effects/Shaders/blink-effect.gdshader" id="2_ea4n5"]
[ext_resource type="PackedScene" uid="uid://c78de7vermw86" path="res://Common/hurt_box.tscn" id="3_fa5c1"]
[ext_resource type="PackedScene" uid="uid://dopgb8cpl4rtb" path="res://Common/territory_box.tscn" id="5_xn0lc"]
[ext_resource type="PackedScene" uid="uid://13a4v0a0gkvb" path="res://Common/hit_box.tscn" id="6_rs6nv"]
[ext_resource type="PackedScene" uid="uid://cy3c7pfk65vcq" path="res://Common/stats.tscn" id="7_h2cqx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p7un3"]
shader = ExtResource("2_ea4n5")
shader_parameter/active = false

[sub_resource type="Animation" id="Animation_jvu44"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cucumber/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34]
}

[sub_resource type="Animation" id="Animation_bkrp2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cucumber/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cucumber/BlowHitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cucumber/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_57dtn"]
resource_name = "Run"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cucumber/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="Animation" id="Animation_pmjmj"]
resource_name = "Attack"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cucumber/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cucumber/BlowHitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_t42am"]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cucumber/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [58, 59, 60, 61, 62, 63, 64, 65, 66, 67]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cucumber/HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_hgg2r"]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cucumber/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 89, 90, 91, 92, 93, 94, 95, 96, 97]
}

[sub_resource type="Animation" id="Animation_6clw8"]
resource_name = "JumpUp"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c0nwe"]
_data = {
"Blow": SubResource("Animation_pmjmj"),
"Death": SubResource("Animation_hgg2r"),
"Hit": SubResource("Animation_t42am"),
"Idle": SubResource("Animation_jvu44"),
"JumpUp": SubResource("Animation_6clw8"),
"RESET": SubResource("Animation_bkrp2"),
"Run": SubResource("Animation_57dtn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hbcy8"]
size = Vector2(6, 24)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ijf7d"]
height = 60.0

[sub_resource type="Animation" id="Animation_aj6tg"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false]
}

[sub_resource type="Animation" id="Animation_nk7ml"]
resource_name = "start"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s1h6b"]
_data = {
"RESET": SubResource("Animation_aj6tg"),
"start": SubResource("Animation_nk7ml")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_kukqr"]
radius = 123.065

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ikr8y"]
radius = 16.0
height = 48.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kgv3j"]
radius = 8.0
height = 28.0

[node name="Cucumber" type="CharacterBody2D"]
position = Vector2(171, 520)
collision_layer = 512
script = ExtResource("1_70jif")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_p7un3")
texture = ExtResource("2_2h4xy")
hframes = 4
vframes = 25
frame = 50

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_c0nwe")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 31)
rotation = 1.5708
shape = SubResource("RectangleShape2D_hbcy8")

[node name="HurtBox" parent="." instance=ExtResource("3_fa5c1")]
visible = false
position = Vector2(0, -3)
collision_layer = 4096
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_ijf7d")

[node name="BlinkEffectAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s1h6b")
}

[node name="TerritoryBox" parent="." instance=ExtResource("5_xn0lc")]
visible = false
collision_mask = 1040

[node name="CollisionShape2D" parent="TerritoryBox" index="0"]
shape = SubResource("CircleShape2D_kukqr")

[node name="BlowHitBox" parent="." instance=ExtResource("6_rs6nv")]
visible = false
position = Vector2(-26, 2)
collision_layer = 2048
collision_mask = 1024
tag = 1

[node name="CollisionShape2D" parent="BlowHitBox" index="0"]
shape = SubResource("CapsuleShape2D_ikr8y")
disabled = true

[node name="HitBox" parent="." instance=ExtResource("6_rs6nv")]
visible = false
position = Vector2(48, 0)
collision_layer = 2048
collision_mask = 16
tag = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-25, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kgv3j")
disabled = true

[node name="stats" parent="." instance=ExtResource("7_h2cqx")]
MAX_HEARTH = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="TerritoryBox" to="." method="_on_territory_box_area_entered"]
[connection signal="area_exited" from="TerritoryBox" to="." method="_on_territory_box_area_exited"]

[editable path="HurtBox"]
[editable path="TerritoryBox"]
[editable path="BlowHitBox"]
[editable path="HitBox"]
